@@ -3,6 +3,7 @@ Package: dChipIO
 
 Version: 0.1.2-9000 [2016-01-12]
 o CRAN Policies: Package Title Case and proper starting of description.
+o ROBUSTNESS: Add package tests (from examples). Test coverage is %97.
 o Updated broken Affymetrix URL.
 
 
